Rewrite task 30